--- a/PruebaEF6/Views/League/Edit.cshtml
+++ b/PruebaEF6/Views/League/Edit.cshtml
@@ -7,11 +7,11 @@
 
 @using (Html.BeginForm("EditLeague", "League", new { id = Model.Id }, FormMethod.Post, null))
 {
-    <div>
+    <div class="mb-3">
         @Html.LabelFor(model => model.Country, "Country", null)
         @Html.DropDownListFor(model => model.Country_Id, (List<SelectListItem>)ViewBag.Countries, new { @class = "form-select" })
     </div>
-    <div>
+    <div class="mb-3">
         @Html.LabelFor(model => model.Name)
         @Html.TextBoxFor(model => model.Name, htmlAttributes: new { @class = "form-control" })
     </div>
