--- a/PruebaEF6/Views/Shared/_Layout.cshtml
+++ b/PruebaEF6/Views/Shared/_Layout.cshtml
@@ -19,9 +19,10 @@
             <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
                     <li>@Html.ActionLink("Inicio", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Teams", "Index", "Team", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Players", "Index", "Player", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Teams", "Index", "Team", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Leagues", "Index", "League", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Countries", "Index", "Country", new { area = "" }, new { @class = "nav-link" })</li>
                 </ul>
             </div>
         </div>
